--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,25 @@
-* {
-  
+.App {
+text-align: center;
 }
 
-form {
-border: black solid 3px;
+main {
+  max-width: 75vw;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.fieldContainer {
 display: flex;
-flex-direction: row;
-justify-items: space-between;
+flex-direction: column;
+width: 100%;
+margin: 1em auto 0 auto;
+}
+
+.textFieldContainer {
+margin-top: .5em;
+margin-bottom: .5em;
+}
+
+button {
+width: 25%;
 }
