--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
 text-align: center;
+padding: 5em;
 }
 
 main {
@@ -21,5 +22,14 @@ margin-bottom: .5em;
 }
 
 button {
+width: 25%;
+}
+
+.wrap {
+  margin: 1em;
+}
+
+.Dropdown {
+margin: auto;
 width: 25%;
 }
